--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
 
 
+section{
+    padding: 70px;
+}
+
 h1{
     font-family: 'Playfair Display', serif;
 }
@@ -12,7 +16,21 @@ nav {
    
    
 }
-
+.half-half-image-text{
+    padding: 70px 0px;
+}
+    .content{
+      height: 100%;
+     
+      align-items: center;
+      padding: 35px 0px;
+     } 
+    
+    .img{
+      min-height: 320px;
+      height: 100%;
+      border-radius: 10px;
+    }
 
     
 .jumbo{
@@ -33,14 +51,14 @@ nav {
     align-items: center;
     text-align: center
 }
-.marketing h2 {
+/* .marketing h2 {
     text-align: left;
 }
 .marketing p{
     text-align: left;
 }.marketing img{
     align-items: left;
-}
+} */
 
 .testimonial-container {
     width: 85%;
@@ -70,4 +88,3 @@ nav {
   button#prev {
     left: -1.1em;
   }
- 
