--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
-
+body{
+    background-color: #f0ecfc;
+background-image: linear-gradient(315deg, #f0ecfc 0%, #c797eb 74%);
+}
 section{
     padding: 70px;
 }
 
-h1{
+h1 {
     font-family: 'Playfair Display', serif;
+}
+h5 ,h2{
+    font-family: 'Playfair Display', serif;
+    text-decoration: underline;
 }
 p{
     font-family: 'Nanum Myeongjo', serif;
@@ -18,10 +25,7 @@ p{
 }
 nav {
     color: black;
-    padding-bottom: 0;
-    margin-bottom: 0;
-  
-   
+    background: white;
    
 }
 .half-half-image-text{
